unpackaged/main/default/objects/Application_Unit__c/Application_Unit__c.object-meta.xml
<CustomObject>
    <label>Application Unit</label>
    <nameField>
        <displayFormat>APUN-{00}</displayFormat>
        <label>APP Unit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>