unpackaged/main/default/objects/Application_Unit__c/fields/Animals__c.field-meta.xml
<CustomField>
    <fullName>Animals__c</fullName>
    <formula>TEXT( Unit__r.Animals__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animals</label>
    <type>Text</type>
</CustomField>