unpackaged/main/default/objects/Application_Unit__c/fields/Animals_At_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Animals_At_Assessment__c</fullName>
    <label>Animals At Assessment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>