unpackaged/main/default/objects/Application_Unit__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <formula>TEXT(Unit__r.Business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business</label>
    <type>Text</type>
</CustomField>