unpackaged/main/default/objects/Application_Unit__c/fields/Date_Certified__c.field-meta.xml
<CustomField>
    <fullName>Date_Certified__c</fullName>
    <description>Date the unit is certified</description>
    <label>Date Certified</label>
    <type>Date</type>
</CustomField>