unpackaged/main/default/objects/Application_Unit__c/fields/List_of_Animals__c.field-meta.xml
<CustomField>
    <fullName>List_of_Animals__c</fullName>
    <label>List of Animals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>