unpackaged/main/default/objects/Application_Unit__c/fields/Number_of_Animals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Animals__c</fullName>
    <formula>Unit__r.Number_of_Animals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>