unpackaged/main/default/objects/Application_Unit__c/fields/Own_Catching__c.field-meta.xml
<CustomField>
    <fullName>Own_Catching__c</fullName>
    <formula>Unit__r.Own_Catching__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Own Catching</label>
    <type>Checkbox</type>
</CustomField>