unpackaged/main/default/objects/Application_Unit__c/fields/Own_Transport__c.field-meta.xml
<CustomField>
    <fullName>Own_Transport__c</fullName>
    <formula>Unit__r.Own_Transport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Own Transport</label>
    <type>Checkbox</type>
</CustomField>