unpackaged/main/default/objects/Application_Unit__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <formula>TEXT( Unit__r.Production__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production</label>
    <type>Text</type>
</CustomField>