unpackaged/main/default/objects/Application_Unit__c/fields/Update_to_flock_size__c.field-meta.xml
<CustomField>
    <fullName>Update_to_flock_size__c</fullName>
    <label>Update to flock size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>